Diskdatabase should work now, although errors is not handled correctly. Also includes needs to be fixed as well as the intended Database directory

--- a/clientserver/test/Diskdatabase/Makefile
+++ b/clientserver/test/Diskdatabase/Makefile
@@ -26,7 +26,7 @@ PROGS = diskdatabaseTest
 all: $(PROGS)
 
 # Targets rely on implicit rules for compiling and linking
-diskdatabaseTest: diskdatabaseTest.o diskdatabase.o
+diskdatabaseTest: diskdatabaseTest.o diskdatabase.o article.o newsgroup.o
 
 # Phony targets
 .PHONY: all test clean distclean
